Fix top alignment of icons to their respective event/user-group heading/logo

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -154,3 +154,7 @@ a.logo {
 .user_group {
   margin-bottom: 5px;
 }
+
+.event-icon-bar {
+  margin-top: 10px;
+}
